--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           args: zip ./acknowledge.zip ./acknowledge.py
       - name: Deploy registration lambda
-        uses: appleboy/lambda-action@master
+        uses: appleboy/lambda-action@v0.1.3
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -47,7 +47,7 @@ jobs:
           function_name: messaging-app-register
           zip_file: register.zip
       - name: Deploy send lambda
-        uses: appleboy/lambda-action@master
+        uses: appleboy/lambda-action@v0.1.3
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -55,7 +55,7 @@ jobs:
           function_name: messaging-app-send
           zip_file: send.zip
       - name: Deploy receive lambda
-        uses: appleboy/lambda-action@master
+        uses: appleboy/lambda-action@v0.1.3
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -63,7 +63,7 @@ jobs:
           function_name: messaging-app-receive
           zip_file: receive.zip
       - name: Deploy acknowledge lambda
-        uses: appleboy/lambda-action@master
+        uses: appleboy/lambda-action@v0.1.3
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
