Further clean command output to try to get lambda configuration update to work Add update function for other lambdas

--- a/.github/workflows/update_config.yml
+++ b/.github/workflows/update_config.yml
@@ -38,8 +38,12 @@ jobs:
         with:
           args: zip config.zip -r python/
       - name: Publish new layer version
-        run: LAYER_ARN=$(aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep LayerVersionArn | tr ' ' '\n' | tr -d \" | grep arn:aws:lambda )
-      - name: Peekaboo
-        run: echo $LAYER_ARN
+        run: LAYER_ARN=$(aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep LayerVersionArn | tr ' ' '\n' | tr -d \" | tr -d , | grep arn:aws:lambda )
       - name: Update receive lambda with new layer version
         run: aws lambda update-function-configuration --function-name messaging-app-receive --layers $LAYER_ARN
+      - name: Update send lambda with new layer version
+        run: aws lambda update-function-configuration --function-name messaging-app-send --layers $LAYER_ARN
+      - name: Update register lambda with new layer version
+        run: aws lambda update-function-configuration --function-name messaging-app-register --layers $LAYER_ARN
+      - name: Update acknowledge lambda with new layer version
+        run: aws lambda update-function-configuration --function-name messaging-app-acknowledge --layers $LAYER_ARN
