--- a/.github/workflows/update_config.yml
+++ b/.github/workflows/update_config.yml
@@ -38,7 +38,8 @@ jobs:
         with:
           args: zip config.zip -r python/
       - name: Publish new layer version
-        run: LAYER_ARN=$(aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep LayerVersionArn | tr ' ' '\n' | tr -d \" | tr -d , | grep arn:aws:lambda )
+        #run: LAYER_ARN=$(aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep LayerVersionArn | tr ' ' '\n' | tr -d \" | tr -d , | grep arn:aws:lambda )
+        run: aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip
       - name: Update receive lambda with new layer version
         run: aws lambda update-function-configuration --function-name messaging-app-receive --layers $LAYER_ARN
       - name: Update send lambda with new layer version
