--- a/.github/workflows/update_config.yml
+++ b/.github/workflows/update_config.yml
@@ -38,13 +38,12 @@ jobs:
         with:
           args: zip config.zip -r python/
       - name: Publish new layer version
-        #run: LAYER_ARN=$(aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep LayerVersionArn | tr ' ' '\n' | tr -d \" | tr -d , | grep arn:aws:lambda )
-        run: aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip
+        run: LAYER_VERSION=$( aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep '\"Version\":' | tr -d \":, | tr " " "\n" | egrep [0-9]+ )
       - name: Update receive lambda with new layer version
-        run: aws lambda update-function-configuration --function-name messaging-app-receive --layers $LAYER_ARN
+        run: aws lambda update-function-configuration --function-name messaging-app-receive --layers ${{ secrets.LAYER_ARN }}:$LAYER_VERSION
       - name: Update send lambda with new layer version
-        run: aws lambda update-function-configuration --function-name messaging-app-send --layers $LAYER_ARN
+        run: aws lambda update-function-configuration --function-name messaging-app-send --layers ${{ secrets.LAYER_ARN }}:$LAYER_VERSION
       - name: Update register lambda with new layer version
-        run: aws lambda update-function-configuration --function-name messaging-app-register --layers $LAYER_ARN
+        run: aws lambda update-function-configuration --function-name messaging-app-register --layers ${{ secrets.LAYER_ARN }}:$LAYER_VERSION
       - name: Update acknowledge lambda with new layer version
-        run: aws lambda update-function-configuration --function-name messaging-app-acknowledge --layers $LAYER_ARN
+        run: aws lambda update-function-configuration --function-name messaging-app-acknowledge --layers ${{ secrets.LAYER_ARN }}:$LAYER_VERSION
