--- a/.github/workflows/update_config.yml
+++ b/.github/workflows/update_config.yml
@@ -47,3 +47,8 @@ jobs:
         run: aws lambda update-function-configuration --function-name messaging-app-register --layers ${{ secrets.LAYER_ARN }}:${{ env.CURRENT_LAYER_VERSION }}
       - name: Update acknowledge lambda with new layer version
         run: aws lambda update-function-configuration --function-name messaging-app-acknowledge --layers ${{ secrets.LAYER_ARN }}:${{ env.CURRENT_LAYER_VERSION }}
+      - name: Notify Lambda Updated
+        uses: techulus/push-github-action@1.0.0
+        env:
+          API_KEY: ${{ secrets.PUSH_API_KEY }}
+          MESSAGE: "Messaging API configuration updated"
