--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,15 +11,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   deploy_source:
     name: Update Lambda Functions
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v1
       - name: Package registration code
@@ -71,8 +66,19 @@ jobs:
           function_name: messaging-app-acknowledge
           zip_file: acknowledge.zip
       - name: Notify Lambda Updated
+        if: ${{ success() }}
         uses: techulus/push-github-action@1.0.0
         env:
           API_KEY: ${{ secrets.PUSH_API_KEY }}
-          MESSAGE: "Messaging API Lambda Functions updated"
+          MESSAGE: "Update Messaging API Lambda Functions succeeded"
+          TITLE: "✅ Updated"
+          LINK: "https://github.com/AaronLi/messaging-app-python"
+      - name: Notify Lambda Not Updated
+        if: ${{ !success() }}
+        uses: techulus/push-github-action@1.0.0
+        env:
+          API_KEY: ${{ secrets.PUSH_API_KEY }}
+          MESSAGE: "Update Messaging API Lambda Functions failed"
+          TITLE: "❎ Failed"
+          LINK: "https://github.com/AaronLi/messaging-app-python/actions/workflows/deploy.yml"
       
