--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,3 +82,66 @@ jobs:
           TITLE: "❎ Failed"
           LINK: "https://github.com/AaronLi/messaging-app-python/actions/workflows/deploy.yml"
       
+  create-new-layer-version:
+    runs-on: ubuntu-latest
+
+    outputs:
+      new-layer-version: ${{ steps.publish-layer-step.outputs.layer-version }}
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - name: check config file changed
+        uses: tj-actions/verify-changed-files@v7.1
+        id: verify-settings-changed
+        with:
+          files: |
+            settings.py
+      - name: fail on unchanged config file
+        if: steps.verify-settings-changed.outputs.files_changed == 'false'
+        run: exit 1
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.8"
+      - uses: aws-actions/setup-sam@v1
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Move files for packaging
+        run: mkdir python && mv settings.py python/settings.py
+      - name: Package settings.py
+        uses: montudor/action-zip@v1.0.0
+        with:
+          args: zip config.zip -r python/
+      - name: Publish new layer version
+        id: publish-layer-step
+        run: echo "::set-output name=layer-version::$( aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep '\"Version\":' | tr -d \":, | tr " " "\n" | egrep [0-9]+ )"
+  update-lambdas-to-new-layer:
+    runs-on: ubuntu-latest
+    needs: create-new-layer-version
+    steps:
+      - name: Update receive lambda with new layer version
+        run: aws lambda update-function-configuration --function-name messaging-app-receive --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
+      - name: Update send lambda with new layer version
+        run: aws lambda update-function-configuration --function-name messaging-app-send --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
+      - name: Update register lambda with new layer version
+        run: aws lambda update-function-configuration --function-name messaging-app-register --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
+      - name: Update acknowledge lambda with new layer version
+        run: aws lambda update-function-configuration --function-name messaging-app-acknowledge --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
+      - name: Notify Configuration Updated
+        if: ${{ success() }}
+        uses: techulus/push-github-action@1.0.0
+        env:
+          API_KEY: ${{ secrets.PUSH_API_KEY }}
+          MESSAGE: "Update Messaging API configuration succeeded"
+          TITLE: "✅ Updated layer to version ${{ needs.create-new-layer-version.outputs.new-layer-version }}"
+          LINK: "https://github.com/AaronLi/messaging-app-python"
+      - name: Notify Lambda Not Updated
+        if: ${{ !success() }}
+        uses: techulus/push-github-action@1.0.0
+        env:
+          API_KEY: ${{ secrets.PUSH_API_KEY }}
+          MESSAGE: "Update Messaging API configuration failed"
+          TITLE: "❎ Failed"
+          LINK: "https://github.com/AaronLi/messaging-app-python/actions/workflows/deploy.yml"
