--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,15 +79,16 @@ jobs:
         env:
           API_KEY: ${{ secrets.PUSH_API_KEY }}
           MESSAGE: "Update Messaging API Lambda Functions failed"
-          TITLE: "❎ Failed"
+          TITLE: "❌ Failed"
           LINK: "https://github.com/AaronLi/messaging-app-python/actions/workflows/deploy.yml"
       
   create-new-layer-version:
+    name: Create new layer version
     runs-on: ubuntu-latest
 
     outputs:
       new-layer-version: ${{ steps.publish-layer-step.outputs.layer-version }}
-      file-changed: ${{ steps.verify-settings-changed.outputs.files_changed == 'true' }}
+      file-changed: ${{ steps.verify-settings-changed.outputs.files_changed }}
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -122,34 +123,35 @@ jobs:
         id: publish-layer-step
         run: echo "::set-output name=layer-version::$( aws lambda publish-layer-version --layer-name messaging-app-settings --compatible-runtimes python3.8 --zip-file fileb://config.zip | grep '\"Version\":' | tr -d \":, | tr " " "\n" | egrep [0-9]+ )"
   update-lambdas-to-new-layer:
+    name: Update lambdas to new layer
     runs-on: ubuntu-latest
     needs: create-new-layer-version
     steps:
       - name: Update receive lambda with new layer version
-        if: ${{ needs.create-new-layer-version.outputs.file-changed }}
+        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-receive --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Update send lambda with new layer version
-        if: ${{ needs.create-new-layer-version.outputs.file-changed }}
+        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-send --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Update register lambda with new layer version
-        if: ${{ needs.create-new-layer-version.outputs.file-changed }}
+        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-register --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Update acknowledge lambda with new layer version
-        if: ${{ needs.create-new-layer-version.outputs.file-changed }}
+        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-acknowledge --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Notify Configuration Updated
-        if: ${{ success() && needs.create-new-layer-version.outputs.file-changed }}
+        if: (needs.create-new-layer-version.outputs.file-changed == 'true') && success()
         uses: techulus/push-github-action@1.0.0
         env:
           API_KEY: ${{ secrets.PUSH_API_KEY }}
           MESSAGE: "Update Messaging API configuration succeeded"
           TITLE: "✅ Updated layer to version ${{ needs.create-new-layer-version.outputs.new-layer-version }}"
           LINK: "https://github.com/AaronLi/messaging-app-python"
-      - name: Notify Lambda Not Updated
-        if: ${{ !success() && needs.create-new-layer-version.outputs.file-changed }}
+      - name: Notify Configuration Not Updated
+        if: (needs.create-new-layer-version.outputs.file-changed == 'true') && !success()
         uses: techulus/push-github-action@1.0.0
         env:
           API_KEY: ${{ secrets.PUSH_API_KEY }}
           MESSAGE: "Update Messaging API configuration failed"
-          TITLE: "❎ Failed"
+          TITLE: "❌ Failed"
           LINK: "https://github.com/AaronLi/messaging-app-python/actions/workflows/deploy.yml"
