--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Update Lambda Code
+name: Update Lambda Code & Configuration
 
 # Controls when the workflow will run
 on:
@@ -125,22 +125,19 @@ jobs:
   update-lambdas-to-new-layer:
     name: Update lambdas to new layer
     runs-on: ubuntu-latest
+    if: needs.create-new-layer-version.outputs.file-changed == 'true'
     needs: create-new-layer-version
     steps:
       - name: Update receive lambda with new layer version
-        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-receive --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Update send lambda with new layer version
-        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-send --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Update register lambda with new layer version
-        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-register --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Update acknowledge lambda with new layer version
-        if: needs.create-new-layer-version.outputs.file-changed == 'true'
         run: aws lambda update-function-configuration --function-name messaging-app-acknowledge --layers ${{ secrets.LAYER_ARN }}:${{ needs.create-new-layer-version.outputs.new-layer-version }}
       - name: Notify Configuration Updated
-        if: (needs.create-new-layer-version.outputs.file-changed == 'true') && success()
+        if: success()
         uses: techulus/push-github-action@1.0.0
         env:
           API_KEY: ${{ secrets.PUSH_API_KEY }}
@@ -148,7 +145,7 @@ jobs:
           TITLE: "✅ Updated layer to version ${{ needs.create-new-layer-version.outputs.new-layer-version }}"
           LINK: "https://github.com/AaronLi/messaging-app-python"
       - name: Notify Configuration Not Updated
-        if: (needs.create-new-layer-version.outputs.file-changed == 'true') && !success()
+        if: !success()
         uses: techulus/push-github-action@1.0.0
         env:
           API_KEY: ${{ secrets.PUSH_API_KEY }}
