--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,13 @@
 on:
   workflow_run:
-    workflows:
-      - "Update Lambda Code & Configuration"
+    workflows: ["Update Lambda Code & Configuration"]
     branches: [main]
     types:
       - completed
+
+  workflow_dispatch:
+
+name: API Tests
 
 jobs:
   run_api_tests:
