--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: "Update Lambda Code & Configuration"
+name: Update Lambda Code & Configuration
 
 # Controls when the workflow will run
 on:
