change branch from main > master

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 on:
   workflow_run:
     workflows: [Update Lambda Code & Configuration]
-    branches: [main]
+    branches: [master]
     types:
       - completed
 
