--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
+    paths: [src/**]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -20,19 +21,19 @@ jobs:
       - name: Package registration code
         uses: montudor/action-zip@v1.0.0
         with:
-          args: zip ./register.zip ./registration.py
+          args: zip ./register.zip ./src/lambda/registration.py
       - name: Package send code
         uses: montudor/action-zip@v1.0.0
         with:
-          args: zip ./send.zip ./send.py
+          args: zip ./send.zip ./src/lambda/send.py
       - name: Package receive code
         uses: montudor/action-zip@v1.0.0
         with:
-          args: zip ./receive.zip ./receive.py
+          args: zip ./receive.zip ./src/lambda/receive.py
       - name: Package acknowledge code
         uses: montudor/action-zip@v1.0.0
         with:
-          args: zip ./acknowledge.zip ./acknowledge.py
+          args: zip ./acknowledge.zip ./src/lambda/acknowledge.py
       - name: Deploy registration lambda
         uses: appleboy/lambda-action@v0.1.3
         with:
@@ -170,9 +171,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
       - name: Run Send Test
-        run: python test/test_send.py --sender Dumfing
+        run: python ./src/test/test_send.py --sender Dumfing
       - name: Run Receive Test
-        run: python test/test_receive.py
+        run: python ./src/test/test_receive.py
       - name: Run Acknowledge Test
-        run: python test/test_acknowledge.py
+        run: python ./src/test/test_acknowledge.py
 
